fixed overlapping navbar stuff

--- a/frontend/src/components/MainFeed/MainFeed.css
+++ b/frontend/src/components/MainFeed/MainFeed.css
@@ -142,7 +142,7 @@
 .left-menu-sticky {
     position: sticky;
     position: -webkit-sticky;
-    z-index: -1;
+    z-index: 1;
     top: 80px;
     width: 75%;
     margin-right: 25%;
