--- a/frontend/src/components/Navigation/NavBar.css
+++ b/frontend/src/components/Navigation/NavBar.css
@@ -33,7 +33,7 @@ body {
     top: 0;
     left: 0;
     /* right: 8px; */
-    /* z-index: 3; */
+    z-index: 3;
     width: 100%;
     height: 52px;
     margin-top: 0px;
@@ -208,7 +208,7 @@ width: 33.3333%;
     z-index: 10;
     position: absolute;
     width: 268px;
-    height: 268px;
+    /* height: 268px; */
 }
 .search-results-parent-div::-webkit-scrollbar {
     display: none;
